--- a/hojun/homepage/templates/homepage.html
+++ b/hojun/homepage/templates/homepage.html
@@ -25,47 +25,55 @@
                 <!-- 슬라이더 콘텐츠 -->
                 <div class="owl-carousel">
                     <div class="item">
-                        <a href="https://data.seoul.go.kr/etc/offerReqst.do">
-                            <img src="{{ url_for('static', filename='hojun\homepage\static\images\city.png')}}" alt="배너 1">
+                        <a href="https://data.seoul.go.kr/etc/offerReqst.do" title="필요한 데이터가 없을 때! 공공데이터 제공신청">
+                            <img src="hojun\homepage\static\images\city.png" alt="필요한 데이터가 없을 때! 공공데이터 제공신청">
                             <p>필요한 데이터가 없을 때! 공공데이터 제공신청</p>
                         </a>
                     </div>
                     <div class="item">
-                        <a href="https://bigdata.seoul.go.kr/">
-                            <img src="{{ url_for('static', filename='hojun\homepage\static\images\finance.png')}}" alt="배너 2">
+                        <a href="https://bigdata.seoul.go.kr/" title="빅데이터 캠퍼스에 데이터 보러 가자!">
+                            <img src="hojun\homepage\static\images\education.png" alt="빅데이터 캠퍼스에 데이터 보러 가자!">
                             <p>빅데이터 캠퍼스에 데이터 보러 가자!</p>
                         </a>
                     </div>
-                </div>
-                <!-- 검색 바 -->
-                <div class="search-bar">
-                    <input type="text" placeholder="원하시는 데이터를 검색하세요.">
-                    <button>검색</button>
+                    <div class="item">
+                        <a href="https://data.seoul.go.kr/dataService/statView.do?wjId=fec8730ec6c5f503f9ddb5bfb591701c&amp;pageIndex=1" title="2024년 10월 기준 서울시 등록인구 현황">
+                            <img src="hojun\homepage\static\images\security.png" alt="2024년 10월 기준 서울시 등록인구 현황">
+                            <p>2024년 10월 기준 서울시 등록인구 현황</p>
+                        </a>
+                    </div>
                 </div>
             </div>
     
-            <div class="data-info-box">
+            <div class="main-section-right">
                 <div class="data-item">
                     <span class="data-text">오늘 추가된 데이터</span>
                     <span class="data-value">1,000,000</span>
                 </div>
-                <hr>
                 <div class="data-item">
                     <span class="data-text">공공데이터</span>
                     <span class="data-value">16,122</span>
                 </div>
-                <hr>
                 <div class="data-item">
                     <span class="data-text">AI학습데이터</span>
                     <span class="data-value">17</span>
                 </div>
-                <div class="highlight-box">
-                    데이터를 쉽게 검색해주는 <span class="highlight">DS_AI</span>
-                </div>
             </div>
         </div>
-    
-        <div class="main-section-middle">
+
+        <div class="main-section-middle"> 
+            <!-- 검색 바 -->
+            <div class="search-bar">
+                <input type="text" placeholder="원하시는 데이터를 검색하세요.">
+                <button>검색</button>
+            </div>
+            <div class="highlight-box">
+                <span>데이터를 쉽게 검색해주는&nbsp</span>
+                <span class="highlight">DS_AI</span>
+            </div>
+        </div>
+        
+        <div class="main-section-low">
             <div class="carousel">
                 <button class="prev-btn">◀</button>
                 <div class="carousel-track-container">
