--- a/donguk/datainsert/templates/upload.html
+++ b/donguk/datainsert/templates/upload.html
@@ -61,7 +61,9 @@
             </form>
         </div>
     </main>
-    <div id="popup" class="popup hidden">
+
+
+    <div id="popup" class="popup">
         <div class="popup-content">
             <p id="popup-message">등록이 완료되었습니다!</p>
             <button id="close-popup">확인</button>
