refactor(chatbot): js코드 ES6 - chatbot.js 하나의 파일 기능별 분할

--- a/hojun/chatbot/templates/chatbot.html
+++ b/hojun/chatbot/templates/chatbot.html
@@ -53,8 +53,7 @@
             </div>
         </section>
     </div>
-
-    <script src="{{ url_for('chatbot.static', filename='js/chatbot.js') }}"></script>
+    <script type="module" src="{{ url_for('chatbot.static', filename='js/main.js') }}"></script>
     {% endblock %}
 </body>
 </html>
